keyframe for portfolio title

--- a/index.html
+++ b/index.html
@@ -102,17 +102,17 @@
     </div>
     <div class="home_1" id="home">
         <div class="portfolio_title">
-            <span class="portfolio_title_p">P</span>
-            <span class="portfolio_title_o">o</span>
-            <span class="portfolio_title_r">r</span>
-            <span class="portfolio_title_t">t</span>
-            <span class="folio">
+            <div class="portfolio_title_p" style="display: inline-block;">P</div>
+            <div class="portfolio_title_o" style="display: inline-block;">o</div>
+            <div class="portfolio_title_r" style="display: inline-block;">r</div>
+            <div class="portfolio_title_t" style="display: inline-block;">t</div>
+            <div class="folio">
                 <span>f</span>
                 <span>o</span>
                 <span>l</span>
                 <span>i</span>
                 <span>o</span>
-            </span>
+            </div>
             <div class="replace_folio">
                 <span>F</span>
                 <span>o</span>
