Upgrade portfolio title (animation on mouse over and out)

--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <link rel="stylesheet" href="./styles/nav_bar_mobile.css">
     <link rel="stylesheet" href="./styles/home.css">
     <script src="./scripts/nav_bar_mobile.js"></script>
+    <script src="./scripts/folio_title.js"></script>
+
     <!-- Bootstrap -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
@@ -101,7 +103,7 @@
         <div class="project_details"><a href="" style="color: rgb(124, 124, 124);">Project 3</a></div>
     </div>
     <div class="home_1" id="home">
-        <div class="portfolio_title">
+        <div class="portfolio_title" onmouseover="folio_title_transform()" onmouseout="folio_title_transform_off()">
             <div class="portfolio_title_p" style="display: inline-block;">P</div>
             <div class="portfolio_title_o" style="display: inline-block;">o</div>
             <div class="portfolio_title_r" style="display: inline-block;">r</div>
